--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1,3 +1,7 @@
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'Open Sans', sans-serif;
   color: #484848;
@@ -5,36 +9,29 @@ body {
   margin: 0;
 }
 
-.container {
+
+.listing-container {
   margin: 0 auto;
   padding: 0 12px;
 }
 
 @media (min-width: 744px) {
-  .container {
+  .listing-container {
     width: 696px;
   }
 }
 
-#toolbar {
-  display: flex;
-  align-items: center;
-  border-bottom: 1px solid #e4e4e4;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+.home-container {
+  margin: 0 auto;
+  padding:0 25px;
 }
 
-#toolbar .icon {
-  height: 34px;
-  padding: 16px 12px 16px 24px;
-  display: inline-block;
+@media (min-width: 1131px){
+  .home-container {
+    width: 1080px;
+  }
 }
 
-#toolbar h1 {
-  color: #4fc08d;
-  display: inline-block;
-  font-size: 28px;
-  margin: 0;
-}
 
 .heading {
   margin-bottom: 2em;
@@ -50,11 +47,10 @@ body {
   color: #767676;
 }
 
-
-
-
-
-
+hr {
+  border: 0;
+  border-top: 1px solid #dce0e0;
+}
 
 button {
   text-align: center;
@@ -67,52 +63,3 @@ button {
 }
 
 
-
-
-
-.modal-content {
-  height: 100%;
-  max-width: 105vh;
-  padding-top: 12vh;
-  margin: 0 auto;
-  position: relative;
-}
-
-/* .modal-content img {
-  max-width: 100%;
-} */
-
-
-
-
-.image-carousel{
-  height: 100%;
-  margin-top: -12vh;
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.image-carousel img {
-  width: 100%;
-}
-
-.image-carousel .controls {
-  position: absolute;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-}
-
-.carousel-control {
-  padding: 1rem;
-  color: #ffffff;
-  opacity: 0.85;
-}
-
-@media (min-width: 744px) {
-  .carousel-control {
-    font-size: 3rem;
-  }
-}
