--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -75,3 +75,17 @@ button {
   }
 }
 
+.login-container {
+  margin: 0 auto;
+  padding: 0 12px;
+}
+
+@media (min-width: 374px) {
+  .login-container {
+    width: 350px;
+  }
+}
+
+input[type=text] {
+  -webkit-appearance : none;
+}
